Fix pixel gap between drag proxy and header

--- a/src/less/goldenlayout-base.less
+++ b/src/less/goldenlayout-base.less
@@ -121,13 +121,13 @@
   .lm_tabs {
     position: absolute;
     display: flex;
+    height: 20px;
   }
 
   // Single Tab container. A single Tab is set for each pane, a group of Tabs are contained in ".lm_header"
   .lm_tab {
     cursor: pointer;
     float: left;
-    height: @height2;
     margin-top: 1px;
     padding: 0px 10px 5px;
     position: relative;
